--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3 class="title">Contact Info</h3>
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-phone"></i></span>
+              <span class="icon"><i class="fab fa-whatsapp"></i></span>
               <span class="text">(+62) 853-5259-4403</span>
             </li>
             <li>
